--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Why I want to become a developer</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1>Why I want to become a developer?</h1>
+  <p>
+    I have always been fascinated by technology and how it can be used to solve problems and improve people's lives. As a developer, I have the opportunity to not only learn and work with cutting-edge technologies, but also to use my skills and creativity to build applications and systems that can have a real impact on the world.
 
+I am also drawn to the constantly evolving nature of the field. There is always something new to learn and discover, and the fast-paced nature of the industry means that there are always new challenges to tackle.
+
+Ultimately, I want to become a developer because it combines my passion for technology with the opportunity to create and make a difference.
+  </p>
 </body>
-
 </html>
