--- a/main.html
+++ b/main.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
-  <title>Why I want to become a developer</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <h1>Why I want to become a developer?</h1>
+	<!-- the entire body must be written by student -->
+	<h1>Why I want to become a developer?</h1>
   <p>
     I have always been fascinated by technology and how it can be used to solve problems and improve people's lives. As a developer, I have the opportunity to not only learn and work with cutting-edge technologies, but also to use my skills and creativity to build applications and systems that can have a real impact on the world.
 
@@ -12,5 +16,11 @@ I am also drawn to the constantly evolving nature of the field. There is always 
 
 Ultimately, I want to become a developer because it combines my passion for technology with the opportunity to create and make a difference.
   </p>
+
+
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
+
 </html>
